# client-server-chat

./: .env.example  .gitignore  CMakeLists.txt  Makefile  PLAN.md  README.md  client  client.cpp  command_processor.cpp  command_processor.h  connection_pool.h  main.cpp  message_queue.cpp  network_handler.h  restart.sh  run_tests.sh  server  server.cpp  stress_test  stress_test.cpp
.github/workflows/: c-cpp.yml
frontend/: README.md  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AuthModal.tsx  ChatTerminal.tsx  InputArea.tsx  MessageList.tsx  MobileMenuButton.tsx  PrivateChatWindow.tsx  PrivateMessagePopup.tsx  Sidebar.tsx
frontend/hooks/: useDraggable.ts  useResizable.ts
frontend/lib/: demo-mode.ts  websocket.ts
include/: command_processor.h  connection_pool.h  constants.h  database.h  server.h  server_metrics.h
scripts/: manage_users.py
src/: client.cpp  command_processor.cpp  command_processor.h  connection_pool.cpp  connection_pool.h  database.cpp  main.cpp  message_queue.cpp  message_queue.h  network_handler.cpp  network_handler.h  server.cpp  server.h  server_metrics.cpp  server_metrics.h  socket_utils.cpp  socket_utils.h  stress_test.cpp
tests/: client_test.cpp  server_test.cpp
websocket-bridge/: .gitignore  README.md  index.js  package.json
